# sdo_mm

./: .env.sample  .gitignore  PATHS.md  TODO.md  admin.json  data.json  docker-compose.yml  oas.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  start.bash  test.py
.42c/: conf.yaml
backend/: .env.sample  .gitignore  admin.json  pyproject.toml  pytest.ini
backend/config/: asgi.py  celery.py  custom_dict.py  settings.py  urls.py
backend/docker/celery/beat/: start
backend/docker/celery/flower/: start
backend/docker/celery/worker/: start
backend/docker/django/: Dockerfile  start
backend/docker/rabbitmq/: definitions.json
backend/group/: tests.py
backend/lessons/: admin.py  consumers.py  d_types.py  exceptions.py  mixins.py  models.py  patrials.py  permissions.py  routing.py  serializers.py  servises.py  taskmanager.py  tasks.py  urls.py  utils.py  validators.py  validators_models.py  views.py  viewsets.py
backend/lessons/migrations/: 0001_initial.py  0002_initial.py
backend/lessons/scorm/: __init__.py  core.py  exceptions.py  s_types.py  scorm.py
backend/lessons/taskmanagers/: __init__.py  abc.py  base.py  exceptions.py  taskmanager_depricated.py  taskmanagers.py
backend/lessons/tests/: _test_socket.py  some.py  test_celery_task.py  test_course.py  test_endpoints.py  test_lesson.py  test_models.py  test_question.py  test_serializers.py  test_socket.py  test_taskmanager.py  test_url_step.py  test_views.py
backend/users/: admin.py  forms.py  manadgers.py  models.py  serializers.py  test.py  urls.py  utils.py  views.py
backend/users/migrations/: 0001_initial.py  0002_profession_workexperience_user_profession.py
ml/: docker-compose.yaml  fast_api_wiki.py  opensearch.yml  pyproject.toml  requirements.txt  streamlit_wiki.py
(+655 files in other folders)
