[project]
name = "ml"
version = "0.1.0"
description = ""
authors = [
    {name = "ArtDemkin",email = "artemonuys@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "opensearch-py (>=2.8.0,<3.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
